# FretLab-Cpp

./: .gitignore  CMakeLists.txt  README.md  setup.sh
cmake/: ConfigTesting.cmake  TestsFretLab.cmake
src/: CMakeLists.txt  main.cpp
src/algorithm/: algorithm.cpp  algorithm.hpp
src/density_nanoparticle/: density.cpp  density.hpp  integrals.cpp  integrals.hpp  nanoparticle.cpp  nanoparticle.hpp
src/input_output/: .input.hpp.swp  input.cpp  input.hpp  output.cpp  output.hpp
src/tools/: enum.hpp  parameters.cpp  parameters.hpp  string_manipulation.cpp  string_manipulation.hpp  target.hpp  timer.cpp  timer.hpp
tests/: runtest_config.py
tests/acceptor_donor_coulomb/: acceptor_donor_coulomb.inp  test
tests/acceptor_donor_coulomb/densities/: aceptor_coarse.cub  donor_coarse.cub
tests/acceptor_donor_with_overlap_integral/: acceptor_donor_with_overlap_integral.inp  test
tests/acceptor_np_charges/: acceptor_np_charges.inp  test
tests/integrate_density/: integrate_density.inp  test
